# team-beta-w6

./: LICENSE.md  README.md  pyproject.toml
beta/: README.md  requirements.txt  setup.py
beta/alpha/: __init__.py  __main__.py  beta.py
